# IUBH-habittracker

./: .gitignore  README.md  datefile.sav  main.py  pyproject.toml  requirements.txt  savefile-24may2025.sav  savefile.old-notcompat  savefile.sav
docs/: stipulations.md
src/: analysis.py  colorprint.py  constants.py  controller.py  habit.py  storage.py  storage2.py  view.py
src/controller/: controller.py
src/model/: habit.py  storage.py
src/view/: view.py
tests/: test_controller.py  test_habit.py  test_storage2.py
