[project]
name = "Pat's Habit Tracker"
version = "1.0.0"
description = "A very important project"
readme = "README.md"
requires-python = ">=3.13.0"
# List any runtime dependencies here if needed.
dependencies = [
    # e.g., "requests>=2.25.1",
]

[project.optional-dependencies]
# You can install these with: pip install .[test]
test = [
  "pytest>=8.3.3"
]

[build-system]
# Use setuptools (version 61 or later is recommended for PEP 621 support) and wheel.
requires = [
  "setuptools>=61",
  "wheel"
]
build-backend = "setuptools.build_meta"
